resources/css/style.css
* {
  box-sizing: border-box;
}

::-moz-selection { /* Code for Firefox */
  color: #2e62ff;
  background: #a6a4a4;
}

::selection {
  color: #2e62ff;
  background: #a6a4a4;
}

body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  background-color: #110326;
}

.hero-image {
  background-image: url("https://b0bby104.github.io/firstproject/images/code.jpg");
  background-color: #cccccc;
  height: 1000px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  color: white;
  float: none;
}

#hero-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

#picuretext {
  position: absolute;
  bottom: 3px;
  right: 10px;
}

h1 {
  font-weight: 900;
  font-size: 3rem;
  text-decoration: underline dashed;
  color: #bfbfbf;
  font-family: 'Merriweather', serif;
  text-shadow: 1px 1px 5px #93b2c4;
  text-align: center;
}

ul {
  color: #999999;.
  text-align: center;
  margin-left: 54.6975rem;
}

.list1 {
  color
  : gray
}

a {
  color: #2664ff;
  font-family: 'Open Sans', sans-serif;
  text-align: center;
}
.links {
  color: white;
}

.links:hover {
  color: #3058db;
  background-color: white;
}

.paragraphs {
  background-image: linear-gradient(to right, #666666, #202057);
  text-align: center;
  padding-left: 8px;
  padding-right: 8px;
  margin-left: 250px;
  margin-right: 250px;
  background-blend-mode: hue;
}

#p1 {
  font-size: 15px;
  color: white;
  text-shadow: 3px 2px 5px #000000;
  font-family: 'Merriweather', serif;
  text-align: center;
}

#p2 {
  font-size: 13px;
  color: white;
  font-family: 'Merriweather', serif;
  text-shadow: 3px 2px 5px #000000;
  text-align: center;
}

#feedbackform{
  background-color: ##110326;
}

.feedback {
  color: white;
  font-family: 'Merriweather', serif;
  text-shadow: 3px 2px 5px #000000;
  text-align: center;
  margin-top: 20px
}

button{
  color: inherit;
  font-family: inherit;
  text-shadow: inherit;
  background-color: #110326;
}

footer {
  font-size: 10px;
  color: lightgray;
  margin-top: 80px;
}

